--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,8 @@
 		<div class="page-container">
 			<!-- bloc-0 -->
 			<header>
-				<div class="bloc bgc-white l-bloc" id="bloc-0">
-					<div class="container bloc-sm">
+				<div class="bloc l-bloc">
+					<div class="container">
 						<nav class="navbar row">
 							<div class="navbar-header">
 								<a class="navbar-brand" href="index.html"><img src="images/la-chouette-agence.png" alt="Logo La chouette agence" /></a>
@@ -36,7 +36,7 @@
 							<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 								<ul class="site-navigation nav navbar-nav">
 									<li><a href="index.html">Accueil</a></li>
-									<li><a href="page2.html">Contact</a></li>
+									<li><a href="contact.html">Contact</a></li>
 								</ul>
 							</div>
 						</nav>
@@ -93,16 +93,21 @@
 									</button>
 								</form>
 							</div>
-						</div>
-						<div class="col-sm-6">
-							<p>
-								contact@lachouetteagence.com<br/>2 place Sathonay, 69001 Lyon<br/>Ouvert de 9h à 18h, du lundi au vendredi<br/>
-							</p>
+							<div class="col-sm-6">
+								<p>
+									contact@lachouetteagence.com<br/>2 place Sathonay, 69001 Lyon<br/>Ouvert de 9h à 18h, du lundi au vendredi<br/>
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
 			</section>
 			<!-- bloc-7 END -->
+
+			<!-- ScrollToTop Button -->
+				<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+			<!-- ScrollToTop Button END-->
+
 
 			<!-- Footer - bloc-8 -->
 			<footer>
