--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		<div class="page-container">	 
 			<!-- bloc-0 -->
 			<header>
-				<div class="bloc bgc-white l-bloc" id="bloc-0">
-					<div class="container bloc-sm">
+				<div class="bloc l-bloc">
+					<div class="container">
 						<nav class="navbar row">
 							<div class="navbar-header">
 								<a class="navbar-brand" href="index.html"><img src="images/la-chouette-agence.png" alt="Logo La chouette agence" /></a>
@@ -36,7 +36,7 @@
 							<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 								<ul class="site-navigation nav navbar-nav">
 									<li><a href="index.html">Accueil</a></li>
-									<li><a href="page2.html">Contact</a></li>
+									<li><a href="contact.html">Contact</a></li>
 								</ul>
 							</div>
 						</nav>
@@ -56,7 +56,7 @@
 									La chouette agence
 								</h1>
 								<div class="text-center">
-									<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+									<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 								</div>
 							</div>
 						</div>
@@ -81,7 +81,7 @@
 									<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 								</div>
 								<h3 class="mg-md text-center">Web design</h3>
-								<p class="text-center ">
+								<p class="text-center">
 									Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 								</p>
 							</div>
@@ -90,7 +90,7 @@
 									<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 								</div>
 								<h3 class="mg-md text-center">Stratégie</h3>
-								<p class="text-center ">
+								<p class="text-center">
 									Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.
 								</p>
 							</div>
@@ -104,7 +104,7 @@
 								</p>
 							</div>
 						</div>
-						<div class="row voffset-lg voffset">
+						<div class="row">
 							<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 								<h2 class="citation">"La chouette agence est une excellente agence web ! Les <br/>
 									web designers ont réussi à capturer l'éssence de notre <br/>
@@ -126,10 +126,10 @@
 						<div class="row tight-width-whitespace black-background">
 							<div class="col-sm-12">
 								<h2 class="mg-md text-center tc-white">
-									Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.<br/>
+									Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 								</h2>
 								<p class="text-center white">
-									Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.<br/><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a>
+									Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
 								</p>
 							</div>
 						</div>
@@ -210,6 +210,10 @@
 				</div>
 			</section>
 			<!-- bloc-5-cta END -->
+
+			<!-- ScrollToTop Button -->
+				<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+			<!-- ScrollToTop Button END-->
 
 			<!-- Footer - bloc-8 -->
 			<footer>
