--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     	<meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	
-		<link rel="shortcut icon" type="image/png" href="favicon.jpg"> 
-		<!-- <link rel="shortcut icon" type="image/x-icon" href="images/xxxx.ico"> image favicon en format ico? -->
+		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 		
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
@@ -126,7 +125,7 @@
 						<div class="row tight-width-whitespace black-background">
 							<div class="col-sm-12">
 								<h2 class="mg-md text-center tc-white">
-									Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
+									Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.
 								</h2>
 								<p class="text-center white">
 									Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
@@ -203,7 +202,7 @@
 								Prêt pour redonner vie à votre projet ?<br/>Contactez notre équipe !
 							</h2>
 							<div class="col-sm-12 text-center">
-								<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+								<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 							</div>
 						</div>
 					</div>
