Littles amendements in text sizes

--- a/index.html
+++ b/index.html
@@ -25,6 +25,22 @@
 		<!-- Principal conteneur -->
 		<div class="page-container">	 
 			<!-- bloc-0 -->
+			<!-- <header>
+				<div class="container-header">
+					<nav>
+						<div class="logo">
+							<a href="index.html"><img src="images/la-chouette-agence.png" alt="Logo La chouette agence"/></a>
+						</div>
+						<div class="buttons">
+							<ul>
+								<li><a href="index.html">Accueil</a></li>
+								<li><a href="contact.html">Contact</a></li>
+							</ul>
+						</div>
+					</nav>
+				</div>
+			</header> -->
+
 			<header>
 				<div class="bloc l-bloc">
 					<div class="container">
