--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
-   	 	<meta name="keywords" content="agence design Lyon, agence web, web design, strategie">
-    	<meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.">
+
+		<title>La chouette agence - Lyon</title>
+    	<meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Nous trois principaux axes sont le Web design, la Stratégie et les Illustrations.">
+		<meta name="robots" content="index,follow">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	
 		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
@@ -19,7 +21,6 @@
 		<script defer src="./js/jquery.touchSwipe.js"></script>
 		<script defer src="./js/gmaps.js"></script>
 
-   	 	<title>La chouette agence</title>
 	</head>
 	<body>
 		<!-- Principal conteneur -->
