--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,11 @@
 	
 		<script defer src="./js/jquery-2.1.0.js"></script>
 		<script defer src="./js/bootstrap.js"></script>
-		<script defer src="./js/blocs.js"></script>
-		<script defer src="./js/jquery.touchSwipe.js"></script>
+		<!-- <script defer src="./js/blocs.js"></script>
+		<script defer src="./js/jquery.touchSwipe.js"></script> -->
 		<script defer src="./js/gmaps.js"></script>
+		<script defer src="./js/formHandler.js"></script>
+		<script defer src="./js/jqBootstrapValidation.js"></script>
 
    		<title>Contact</title>
 	</head>
@@ -72,7 +74,7 @@
 							<div class="col-sm-6">
 								<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 									<div class="form-group">
-										<label>Nom</label>
+										<label for="name">Nom</label>
 										<input id="name" class="form-control" required />
 									</div>
 									<div class="form-group">
