--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>La chouette agence - Lyon</title>
-    	<meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Nous trois principaux axes sont le Web design, la Stratégie et les Illustrations.">
+		<title>La chouette agence - Agence web design basée à Lyon</title>
+    	<meta name="description" content="Notre passion est d'aider les entreprises à devenir attractives et visibles sur Internet. Nos principales activités sont le Web design, la Stratégie et la création des Illustrations.">
 		<meta name="robots" content="index,follow">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	
@@ -19,35 +19,20 @@
 		<script defer src="./js/bootstrap.js"></script>
 		<script defer src="./js/blocs.js"></script>
 		<script defer src="./js/jquery.touchSwipe.js"></script>
-		<script defer src="./js/gmaps.js"></script>
 
 	</head>
 	<body>
 		<!-- Principal conteneur -->
 		<div class="page-container">	 
-			<!-- bloc-0 -->
-			<!-- <header>
-				<div class="container-header">
-					<nav>
-						<div class="logo">
-							<a href="index.html"><img src="images/la-chouette-agence.png" alt="Logo La chouette agence"/></a>
-						</div>
-						<div class="buttons">
-							<ul>
-								<li><a href="index.html">Accueil</a></li>
-								<li><a href="contact.html">Contact</a></li>
-							</ul>
-						</div>
-					</nav>
-				</div>
-			</header> -->
-
 			<header>
-				<div class="bloc l-bloc">
-					<div class="container">
+				<div class="bloc bgc-white l-bloc " id="bloc-0">
+					<div class="container bloc-sm">
 						<nav class="navbar row">
 							<div class="navbar-header">
-								<a class="navbar-brand" href="index.html"><img src="images/la-chouette-agence.png" alt="Logo La chouette agence" /></a>
+								<a class="navbar-brand" href="index.html"><img src="images/la-chouette-agence.png" alt="Logo La chouette agence" height="40" /></a>
+								<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+									<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+								</button>
 							</div>
 							<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 								<ul class="site-navigation nav navbar-nav">
@@ -62,12 +47,12 @@
 			<!-- bloc-0 END -->
 
 			<!-- bloc-1-presentation -->
-			<section id="presentation">
+			<section>
 				<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 					<div class="container bloc-lg">
 						<div class="row tight-width-whitespace">
 							<div class="col-sm-12">
-								<img src="images/logo.png" class="center-block image-resize-mode" alt="La chouette agence" />
+								<img src="images/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence" />
 								<h1 class="text-center hero-bloc-text tc-white ">
 									La chouette agence
 								</h1>
@@ -82,7 +67,7 @@
 			<!-- bloc-1-presentation END -->
 
 			<!-- bloc-2-services -->
-			<section id="services">
+			<section>
 				<div class="bloc bgc-white l-bloc" id="bloc-2-services">
 					<div class="container bloc-md">
 						<div class="row">
@@ -145,7 +130,7 @@
 									Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.
 								</h2>
 								<p class="text-center white">
-									Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+									Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
 								</p>
 							</div>
 						</div>
@@ -155,19 +140,19 @@
 			<!-- bloc-3-what-i-do END -->
 
 			<!-- bloc-4-portfolio -->
-			<section id="portfolio">
+			<section>
 				<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 					<div class="container bloc-lg">
 						<div class="row">
 							<div class="col-sm-12 text-center">
-								<h2>Nous travaillons avec beaucoup de clients,<br/>
+								<h2>Nous travaillons avec beaucoup de clients,<br>
 									voici nos réalisations.
 								</h2>
 							</div>
 						</div>
 						<div class="row tight-width-whitespace portfolio-row">
 							<div class="col-sm-6">
-								<a href="#" data-lightbox="images/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="images/1.jpg" class="img-responsive portfolio-thumb" alt="Journal"  /></a>
+								<a href="#" data-lightbox="images/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="images/1.jpg" class="img-responsive portfolio-thumb" alt="Journaux empiles"  /></a>
 								<h3 class="mg-md text-center">
 									Refonte d'un site web pour un journal local
 								</h3>
@@ -187,7 +172,7 @@
 						</div>
 						<div class="row tight-width-whitespace portfolio-row">
 							<div class="col-sm-6">
-								<a href="#" data-lightbox="images/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="images/3.jpg" class="img-responsive portfolio-thumb" alt="Voyageur"/></a>
+								<a href="#" data-lightbox="images/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="images/3.jpg" class="img-responsive portfolio-thumb" alt="Voyage" /></a>
 								<h3 class="mg-md text-center">
 									Création d'un site internet pour un voyageur
 								</h3>
@@ -210,13 +195,29 @@
 			</section>
 			<!-- bloc-4-portfolio END -->
 
+			<!-- Liens  -->
+			<!-- <section>
+				<div>
+					<h2>Nos Partenaires :</h2>
+				</div>
+				<div>
+					<ul>
+						<li><a href="voiture.com">voiture.com</a></li>
+						<li><a href="pizza.com">pizza.com</a></li>
+						<li><a href="matoiture.com">matoiture.com</a></li>
+						<li><a href="immobilierseo.com">immobilierseo.com</a></li>
+					</ul>
+				</div>
+			</section> -->
+			<!-- Liens END -->
+
 			<!-- bloc-5-cta -->
 			<section>
 				<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 					<div class="container bloc-lg">
 						<div class="row">
 							<h2 class="mg-md text-center tc-white">
-								Prêt pour redonner vie à votre projet ?<br/>Contactez notre équipe !
+								Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 							</h2>
 							<div class="col-sm-12 text-center">
 								<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
@@ -224,7 +225,7 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> 
 			<!-- bloc-5-cta END -->
 
 			<!-- ScrollToTop Button -->
@@ -238,7 +239,7 @@
 						<div class="row">
 							<div class="col-sm-12">
 								<p class="text-center white">
-									La chouette agence - Agence web basée à Lyon.<br/>
+									La chouette agence - Agence web basée à Lyon.<br>
 								</p>
 								<div class="row row-no-gutters social">
 									<div class="col-sm-3">
