--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,6 @@
 	
 		<script defer src="./js/jquery-2.1.0.js"></script>
 		<script defer src="./js/bootstrap.js"></script>
-		<!-- <script defer src="./js/blocs.js"></script>
-		<script defer src="./js/jquery.touchSwipe.js"></script> -->
 		<script defer src="./js/gmaps.js"></script>
 		<script defer src="./js/formHandler.js"></script>
 		<script defer src="./js/jqBootstrapValidation.js"></script>
@@ -28,16 +26,19 @@
 		<div class="page-container">
 			<!-- bloc-0 -->
 			<header>
-				<div class="bloc l-bloc">
-					<div class="container">
+				<div class="bloc bgc-white l-bloc " id="bloc-0">
+					<div class="container bloc-sm">
 						<nav class="navbar row">
 							<div class="navbar-header">
 								<a class="navbar-brand" href="index.html"><img src="images/la-chouette-agence.png" alt="Logo La chouette agence" /></a>
+								<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+									<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+								</button>
 							</div>
 							<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 								<ul class="site-navigation nav navbar-nav">
-									<li><a href="index.html">Accueil</a></li>
-									<li><a href="contact.html">Contact</a></li>
+									<li><a class="tc-dark-tangerine" href="index.html">Accueil</a></li>
+									<li><a class="tc-dark-tangerine" href="contact.html">Contact</a></li>
 								</ul>
 							</div>
 						</nav>
