--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 					<div class="container bloc-sm">
 						<nav class="navbar row">
 							<div class="navbar-header">
-								<a class="navbar-brand" href="index.html"><img src="images/la-chouette-agence.png" alt="Logo La chouette agence" height="40" /></a>
+								<a class="navbar-brand" href="index.html"><img src="images/la-chouette-agence.png" alt="Logo La chouette agence" /></a>
 								<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 									<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 								</button>
 							</div>
 							<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 								<ul class="site-navigation nav navbar-nav">
-									<li><a href="index.html">Accueil</a></li>
-									<li><a href="contact.html">Contact</a></li>
+									<li><a class="tc-dark-tangerine" href="index.html">Accueil</a></li>
+									<li><a class="tc-dark-tangerine" href="contact.html">Contact</a></li>
 								</ul>
 							</div>
 						</nav>
@@ -54,7 +54,7 @@
 							<div class="col-sm-12">
 								<img src="images/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence" />
 								<h1 class="text-center hero-bloc-text tc-white ">
-									La chouette agence
+									Agence web design - Lyon
 								</h1>
 								<div class="text-center">
 									<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
@@ -72,7 +72,7 @@
 					<div class="container bloc-md">
 						<div class="row">
 							<div class="col-sm-12 text-center">
-								<h2>La chouette agence est une agence de web design qui aide <br/>
+								<h2 class="mg-lg">La chouette agence est une agence de web design qui aide <br/>
 									les entreprises à devenir attractives et visibles sur Internet.</h2>
 							</div>
 						</div>
@@ -81,7 +81,7 @@
 								<div class="text-center">
 									<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 								</div>
-								<h3 class="mg-md text-center">Web design</h3>
+								<h3 class="mg-md text-center tc-dark-tangerine">Web design</h3>
 								<p class="text-center">
 									Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 								</p>
@@ -90,7 +90,7 @@
 								<div class="text-center">
 									<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 								</div>
-								<h3 class="mg-md text-center">Stratégie</h3>
+								<h3 class="mg-md text-center tc-dark-tangerine">Stratégie</h3>
 								<p class="text-center">
 									Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.
 								</p>
@@ -99,7 +99,7 @@
 								<div class="text-center">
 									<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 								</div>
-								<h3 class="mg-md text-center">Illustrations</h3>
+								<h3 class="mg-md text-center tc-dark-tangerine">Illustrations</h3>
 								<p class="text-center ">
 									Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 								</p>
@@ -107,10 +107,10 @@
 						</div>
 						<div class="row">
 							<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-								<h2 class="citation">"La chouette agence est une excellente agence web ! Les <br/>
+								<h2 class="citation">« La chouette agence est une excellente agence web ! Les <br/>
 									web designers ont réussi à capturer l'éssence de notre <br/>
 									entreprise et à l'intégrer à notre site. Cela nous a aidé à <br/>
-									doubler nos ventes en ligne à Lyon."
+									doubler nos ventes en ligne à Lyon. »
 								</h2>
 								<p class="citation_author">Maxime Guibard, PDG de À vos fourchettes</p>
 							</div>
@@ -129,9 +129,10 @@
 								<h2 class="mg-md text-center tc-white">
 									Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.
 								</h2>
-								<p class="text-center white">
-									Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+								<p class="text-center yellow">
+									Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.<br >
 								</p>
+								<a class="cta-eq ltc-white bold-link" href="contact.html">Contactez notre équipe</a>
 							</div>
 						</div>
 					</div>
@@ -153,7 +154,7 @@
 						<div class="row tight-width-whitespace portfolio-row">
 							<div class="col-sm-6">
 								<a href="#" data-lightbox="images/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="images/1.jpg" class="img-responsive portfolio-thumb" alt="Journaux empiles"  /></a>
-								<h3 class="mg-md text-center">
+								<h3 class="mg-md text-center tc-dark-tangerine">
 									Refonte d'un site web pour un journal local
 								</h3>
 								<p class="text-center">
@@ -162,7 +163,7 @@
 							</div>
 							<div class="col-sm-6">
 								<a href="#" data-lightbox="images/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="images/2.jpg" class="img-responsive portfolio-thumb" alt="Photographe" /></a>
-								<h3 class="mg-md text-center">
+								<h3 class="mg-md text-center tc-dark-tangerine">
 									Création d'un site web pour photographes
 								</h3>
 								<p class="text-center">
@@ -173,7 +174,7 @@
 						<div class="row tight-width-whitespace portfolio-row">
 							<div class="col-sm-6">
 								<a href="#" data-lightbox="images/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="images/3.jpg" class="img-responsive portfolio-thumb" alt="Voyage" /></a>
-								<h3 class="mg-md text-center">
+								<h3 class="mg-md text-center tc-dark-tangerine">
 									Création d'un site internet pour un voyageur
 								</h3>
 								<p class="text-center">
@@ -182,7 +183,7 @@
 							</div>
 							<div class="col-sm-6">
 								<a href="#" data-lightbox="images/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="images/4.jpg" class="img-responsive portfolio-thumb" alt="Agence de mariage" /></a>
-								<h3 class="mg-md text-center">
+								<h3 class="mg-md text-center tc-dark-tangerine">
 									Conception d'un site pour une agence de mariage
 								</h3>
 								<p class="text-center">
