Partenaires section creation

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<div class="row">
 							<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 								<h2 class="citation">« La chouette agence est une excellente agence web ! Les <br/>
-									web designers ont réussi à capturer l'éssence de notre <br/>
+									web designers ont réussi à capturer l'essence de notre <br/>
 									entreprise et à l'intégrer à notre site. Cela nous a aidé à <br/>
 									doubler nos ventes en ligne à Lyon. »
 								</h2>
@@ -191,6 +191,17 @@
 								</p>
 							</div>
 						</div>
+						<div class="row partenaires text-center">
+							<div>
+								<h2>Nos Partenaires :</h2>
+								<div class="partenaires_logo">
+									<a href=""><img src="images/logo_voiture.png" alt="Logo Voiture"></a>
+									<a href=""><img src="" alt="Logo Pizza"></a>
+									<a href=""><img src="" alt="Logo Toiture"></a>
+									<a href=""><img src="" alt="Logo Immobilier"></a>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -239,7 +250,7 @@
 					<div class="container bloc-sm">
 						<div class="row">
 							<div class="col-sm-12">
-								<p class="text-center white">
+								<p class="text-center tc-white">
 									La chouette agence - Agence web basée à Lyon.<br>
 								</p>
 								<div class="row row-no-gutters social">
