Amendements in design

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 		<script defer src="./js/formHandler.js"></script>
 		<script defer src="./js/jqBootstrapValidation.js"></script>
 
-   		<title>Contact</title>
+   		<title>Contact - La chouette agence</title>
 	</head>
 	<body>
 		<!-- Principal conteneur -->
@@ -52,7 +52,7 @@
 				<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
 					<div class="container bloc-lg">
 						<div class="row">
-							<div class="col-sm-12">
+							<div class="col-sm-12 ct-txt">
 								<h1 class="text-center hero-bloc-text tc-white">
 									Parlons web design !
 								</h1>
@@ -79,15 +79,15 @@
 										<input id="name" class="form-control" required />
 									</div>
 									<div class="form-group">
-										<label>Adresse email</label>
+										<label for="email">Adresse e-mail</label>
 										<input id="email" class="form-control" type="email" required />
 									</div>
 									<div class="form-group">
-										<label>Comment nous avez-vous connu ?</label>
-										<input class="form-control" type="email" required id="input_504" />
+										<label for="input_504">Comment nous avez-vous connu ?</label>
+										<input id="input_504" class="form-control" type="email" required />
 									</div>
 									<div class="form-group">
-										<label>Brief de votre projet (Ajoutez autant de détails que nécessaire)<br/></label>
+										<label for="message">Brief de votre projet (Ajoutez autant de détails que nécessaire)<br/></label>
 										<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
 									</div> 
 									<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
@@ -96,8 +96,11 @@
 								</form>
 							</div>
 							<div class="col-sm-6">
+								<h4>Nos coordonées :</h4>
 								<p>
-									contact@lachouetteagence.com<br/>2 place Sathonay, 69001 Lyon<br/>Ouvert de 9h à 18h, du lundi au vendredi<br/>
+									2 place Sathonay, 69001 Lyon<br/>
+									Ouvert de 9h à 18h, du lundi au vendredi<br/>
+									contact@lachouetteagence.com<br/>
 								</p>
 							</div>
 						</div>
@@ -118,7 +121,7 @@
 						<div class="row">
 							<div class="col-sm-12">
 								<p class="text-center white">
-									La chouette agence - Agence web basée à Lyon.<br/>
+									La chouette agence - Agence web basée à Lyon<br/>
 								</p>
 								<div class="row row-no-gutters social">
 									<div class="col-sm-3">
