--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 						</div>
 						<div class="row">
 							<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-								<h2 class="citation">« La chouette agence est une excellente agence web ! Les <br/>
-									web designers ont réussi à capturer l'essence de notre <br/>
-									entreprise et à l'intégrer à notre site. Cela nous a aidé à <br/>
+								<h2 class="citation">« La chouette agence est une excellente agence web ! Les 
+									web designers ont réussi à capturer l'essence de notre 
+									entreprise et à l'intégrer à notre site. Cela nous a aidé à 
 									doubler nos ventes en ligne à Lyon. »
 								</h2>
 								<p class="citation_author">Maxime Guibard, PDG de À vos fourchettes</p>
@@ -147,7 +147,7 @@
 						<div class="row">
 							<div class="col-sm-12 text-center">
 								<h2>Nous travaillons avec beaucoup de clients,<br>
-									voici nos réalisations.
+									voici nos réalisations :
 								</h2>
 							</div>
 						</div>
@@ -196,9 +196,9 @@
 								<h2>Nos Partenaires :</h2>
 								<div class="partenaires_logo">
 									<a href=""><img src="images/logo_voiture.png" alt="Logo Voiture"></a>
-									<a href=""><img src="" alt="Logo Pizza"></a>
-									<a href=""><img src="" alt="Logo Toiture"></a>
-									<a href=""><img src="" alt="Logo Immobilier"></a>
+									<a href=""><img src="images/logo_pizza.png" alt="Logo Pizza"></a>
+									<a href=""><img src="images/logo_matoiture.png" alt="Logo MaToiture"></a>
+									<a href=""><img src="images/logo_immobilier.png" alt="Logo Immobilier"></a>
 								</div>
 							</div>
 						</div>
@@ -207,27 +207,11 @@
 			</section>
 			<!-- bloc-4-portfolio END -->
 
-			<!-- Liens  -->
-			<!-- <section>
-				<div>
-					<h2>Nos Partenaires :</h2>
-				</div>
-				<div>
-					<ul>
-						<li><a href="voiture.com">voiture.com</a></li>
-						<li><a href="pizza.com">pizza.com</a></li>
-						<li><a href="matoiture.com">matoiture.com</a></li>
-						<li><a href="immobilierseo.com">immobilierseo.com</a></li>
-					</ul>
-				</div>
-			</section> -->
-			<!-- Liens END -->
-
 			<!-- bloc-5-cta -->
 			<section>
-				<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+				<div class="bloc tc-white bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 					<div class="container bloc-lg">
-						<div class="row">
+						<div class="row txt-lg">
 							<h2 class="mg-md text-center tc-white">
 								Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 							</h2>
@@ -251,7 +235,7 @@
 						<div class="row">
 							<div class="col-sm-12">
 								<p class="text-center tc-white">
-									La chouette agence - Agence web basée à Lyon.<br>
+									La chouette agence - Agence web basée à Lyon<br>
 								</p>
 								<div class="row row-no-gutters social">
 									<div class="col-sm-3">
@@ -275,44 +259,29 @@
 										</div>
 									</div>
 								</div>
-								<div class="row">
+								<div class="row annuaires">
 									<div class="col-sm-4">
-										Partenaires
+										Annuaires 
 										<ul>
-											<li><a href="voiture.com">voiture.com</a></li>
-											<li><a href="pizza.com">pizza.com</a></li>
-											<li><a href="matoiture.com">matoiture.com</a></li>
-											<li><a href="immobilierseo.com">immobilierseo.com</a></li>
-										</ul>		
-									</div>
-									<div class="col-sm-4">
-										Annuaires liste 1
-										<ul>
-											<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-											<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-											<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-											<li><a href="123seoture.com">123seo.com</a></li>
-											<li><a href="123site.com">123site.com</a></li>
-											<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-											<li><a href="listeagence.com">listeagence.com</a></li>
-											<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-											<li><a href="listeseo.com">listeseo.com</a></li>
+											<li>annuaireagence.com</li>
+											<!-- <li>annuaireseo.com</li> -->
+											<li>annuairemarketing.com</li>
+											<!-- <li>123seo.com</li> -->
+											<li>listeagence.com</li>
+											<!-- <li>listeseo.com</li> -->
 										</ul>
 									</div>
-									<div class="col-sm-4">
-										Annuaires liste 2
+									<!-- <div class="col-sm-4">
+										Annuaires 
 										<ul>
-											<li><a href="betterseo.com">betterseo.com</a></li>
-											<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-											<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-											<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-											<li><a href="liensagogo.com">liensagogo.com</a></li>
-											<li><a href="backlink.com">backlink.com</a></li>
-											<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-											<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-											<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
+											<li>betterseo.com</li>
+											<li>ameliorerseo.com</li>
+											<li>seojuicelien.com</li>
+											<li>meilleursliens.com</li>
+											<li>linkjuiceannuaire.com</li>
+											<li>vraiseofiable.com</li>
 										</ul>
-									</div>
+									</div> -->
 								</div>
 							</div>
 						</div>
