Little amendements in contact page

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
-    	<meta charset="utf-8">
+		<meta charset="utf-8">
+		
+		<title>Contact - La chouette agence</title>
 		<meta name="keywords" content="agence design Lyon, agence web, web design, strategie">
     	<meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.">
     	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -18,8 +20,6 @@
 		<script defer src="./js/gmaps.js"></script>
 		<script defer src="./js/formHandler.js"></script>
 		<script defer src="./js/jqBootstrapValidation.js"></script>
-
-   		<title>Contact - La chouette agence</title>
 	</head>
 	<body>
 		<!-- Principal conteneur -->
@@ -96,12 +96,12 @@
 								</form>
 							</div>
 							<div class="col-sm-6">
-								<h4>Nos coordonées :</h4>
+								<h4 class="coordonees">Nos coordonées :</h4>
 								<p>
 									2 place Sathonay, 69001 Lyon<br/>
 									Ouvert de 9h à 18h, du lundi au vendredi<br/>
-									contact@lachouetteagence.com<br/>
 								</p>
+								<a class="e-mail" href="mailto:contact@lachouetteagence.com">contact@lachouetteagence.com</a>
 							</div>
 						</div>
 					</div>
